--- a/client/src/containers/masternodes/index.css
+++ b/client/src/containers/masternodes/index.css
@@ -17,3 +17,9 @@
   display: block;
   margin: 20px auto 0 auto;
 }
+
+@media (max-width: 768px) {
+  .masternodesContainer > .contentContainer {
+    padding: 35px 0 !important;
+  }
+}
